--- a/CW_CC_Button.htm
+++ b/CW_CC_Button.htm
@@ -48,7 +48,7 @@ h2 {
 <span style = "color:black">     4| </span><span style = "color:green">' Contents: CWindow button </span>
 <span style = "color:black">     5| </span><span style = "color:green">' Compiler: Ported to bc9Basic jcfuller 08/18/2016  </span>
 <span style = "color:black">     6| </span><span style = "color:green">' Compiler: Ported to BCX jcfuller 10/05/2020</span>
-<span style = "color:black">     7| </span><span style = "color:green">' Copyright (c) 2016 José Roca. Freeware. Use at your own risk.</span>
+<span style = "color:black">     7| </span><span style = "color:green">' Copyright (c) 2016 JosÃ© Roca. Freeware. Use at your own risk.</span>
 <span style = "color:black">     8| </span><span style = "color:green">' THIS CODE AND INFORMATION IS PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER</span>
 <span style = "color:black">     9| </span><span style = "color:green">' EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE IMPLIED WARRANTIES OF</span>
 <span style = "color:black">    10| </span><span style = "color:green">' MERCHANTABILITY AND/OR FITNESS FOR A PARTICULAR PURPOSE.</span>
@@ -58,7 +58,7 @@ h2 {
 <span style = "color:black">    14| </span><span style = "color:green">'==============================================================================</span>
 <span style = "color:black">    15| </span><span style = "color:brown">$ONEXIT</span> <span style = "color:maroon">"ASTYLE.EXE -pn $FILE$.CPP"</span><span style = "color:green">'</span>
 <span style = "color:black">    16| </span><span style = "color:brown">$ONEXIT</span> <span style = "color:maroon">"ULEX.EXE $FILE$.CPP"</span>
-<span style = "color:black">    17| </span><span style = "color:brown">$ONEXIT</span> <span style = "color:maroon">"VC_CleanIt.EXE $FILE$.CPP"</span>
+<span style = "color:black">    17| </span><span style = "color:brown">$ONEXIT</span> <span style = "color:maroon">"VC_Only.EXE $FILE$.CPP"</span>
 <span style = "color:black">    18| </span><span style = "color:green">'$ONEXIT "VSCPP.BAT $FILE$ -m64 gui"    <span style = "color:green">'125KB</span>
 <span style = "color:black">    19| </span><span style = "color:green">'$ONEXIT "CLANGCPP.BAT $FILE$ -m64 gui"    <span style = "color:green">'132KB</span>
 <span style = "color:black">    20| </span><span style = "color:brown">$ONEXIT</span> <span style = "color:maroon">"TCLIB.BAT $FILE$"</span>                <span style = "color:green">' 22KB</span>
